fix: Customize and improve content

--- a/quartz/components/styles/search.scss
+++ b/quartz/components/styles/search.scss
@@ -12,7 +12,7 @@
     border: 1px var(--lightgray) solid;
     border-radius: 4px;
     font-family: inherit;
-    font-size: inherit;
+    font-size: 0.8em;
     height: 2rem;
     padding: 0;
     display: flex;
